--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-scrollable-anchor": "^0.4.2",
+    "bootstrap": "^4.5.3",
+    "react": "^16.8.0",
+    "react-bootstrap": "^1.4.3",
+    "react-dom": "^16.8.0",
+    "react-scroll": "^1.8.1",
     "webpack": "^2.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^2.28.0",
     "webpack": "^2.4.1",
